More group + alignfull fixes

--- a/.dev/assets/shared/css/blocks/group.css
+++ b/.dev/assets/shared/css/blocks/group.css
@@ -13,7 +13,12 @@
 			padding: var(--go--spacing--vertical--lg);
 		}
 
-		&.alignfull + .alignfull:not(.wp-block-gallery) {
+		&.alignfull + .has-background.alignfull:not(.wp-block-gallery) {
+			margin-top: calc(var(--go--spacing--vertical--lg) * -1);
+		}
+
+		&.alignfull + .wp-block-image.alignfull,
+		&.alignfull + .wp-block-coblocks-gallery-carousel.alignfull {
 			margin-top: calc(var(--go--spacing--vertical--lg) * -1);
 		}
 	}
